--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,12 @@
 body {
   display: flex;
   flex-direction: row;
-  /* grid-template-rows: 70px 140px 20px auto 70px;
-  grid-template-columns: 150px 500px auto 150px; */
   justify-content: center;
   align-content: center;
   font-family: 'Roboto Mono', monospace;
   background-color: var(--darkblue);
-  color: gray;
+  color: var(--grey2);
+  font-size: .8rem;
 }
 .chart {
   grid-row: 2;
@@ -38,6 +37,7 @@ body {
 }
 
 .info{
+  margin-left: 20px;
   color: var(--red2);
   height: 100px;
 }
@@ -49,8 +49,6 @@ body {
 
 /* head */
 .heading {
-  /* grid-row: 2;
-  grid-column: 3/4; */
   justify-self: center;
   font-size: 30px;
   margin: 5rem 0 2rem 0;
@@ -68,5 +66,20 @@ body {
 }
 
 .map-state-highlighted {
-  fill: #FF0000 !important;
+  /* fill: #FF0000 !important; */
+  opacity: 40%;
+}
+
+/* unused */
+.pagination{
+  margin: 85px 0px 5rem 3rem;
+  justify-self: center;
+}
+
+.is-active {
+  opacity: 100%;
+  fill: var(--red2);
+}
+.is-inactive {
+  opacity: 20%;
 }
