--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,30 @@ body {
   opacity: 40%;
 }
 
+/* scroller*/
+#sections {
+position: relative;
+display: inline-block;
+width: 250px;
+top: 120px;
+z-index: 90;
+}
+
+.step {
+margin-bottom: 200px;
+}
+
+#vis {
+display: inline-block;
+position: sticky;
+top : 200px;
+z-index: 1;
+margin-left: 500px;
+right: 100px;
+background: white;
+opacity: 40%
+}
+
 /* unused */
 .pagination{
   margin: 85px 0px 5rem 3rem;
