--- a/css/styles.css
+++ b/css/styles.css
@@ -70,24 +70,54 @@ body {
 position: relative;
 display: inline-block;
 width: 250px;
-top: 120px;
+top: 0;
 z-index: 90;
+padding-bottom: 100px;
 }
 
 .step {
-margin-top: 200px;
+margin-bottom: 200px;
+width: 350px; 
+height:200px;
+
 }
+
 
 #vis {
 display: inline-block;
 position: sticky;
-top : 400px;
+top : 200px;
 z-index: 1;
-margin-left: 500px;
-right: 100px;
-/*background: white;*/
-opacity: 40%
+margin-left: 650px;
+right: 60px;
+opacity: 1.0
 } 
+.title{
+font-size: 16px;
+font-weight: bold;
+margin-bottom: 10px;
+}
+#vislegend {
+display: inline-block;
+position: sticky;
+top : 150px;
+z-index: 1;
+margin-left: 640px;
+right: 60px;
+opacity: 1.0
+} 
+#storyTitle{
+  margin-top: 50px;
+  font-size: 15px; 
+}
+
+#extra-space{
+
+width: 350px; 
+height:50px;
+
+}
+
 
 h2 {
   font-family: 'Roboto', sans-serif !important;
