--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@
   --grey1: #D9D9D9;
 }
 
-
 body {
   font-family: 'Roboto Mono', monospace;
   background-color: var(--darkblue) !important;
@@ -55,6 +54,7 @@ body {
 .map-state-highlighted {
   opacity: 40%;
 }
+
 
 /* slider */
 
@@ -239,4 +239,20 @@ ul {
   -o-transform-origin: 100% 50%;
   transform-origin: 100% 50%;
   z-index:0;
+}
+
+.line {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 1px;
+  background: var(--grey1);
+}
+
+.d3-geomap text {
+  fill: var(--grey2);
+  font-size: 10px;
+}
+
+a{
+  color: var(--red2);
 }
