--- a/css/styles.css
+++ b/css/styles.css
@@ -69,8 +69,9 @@ body {
  #sections {
 position: relative;
 display: inline-block;
+
 width: 250px;
-top: 0;
+top: -200px;
 z-index: 90;
 padding-bottom: 100px;
 }
@@ -108,8 +109,8 @@ right: 60px;
 opacity: 1.0
 }  */
 #storyTitle{
+  font-size: 0.8rem;
   margin-top: 50px;
-  font-size: 15px; 
 }
 
 #extra-space{
